--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ main {
     height: 800px;
     display: grid;
     grid-template-columns: 56% 44%;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 
 .left-bar {
@@ -53,22 +54,20 @@ h1 {
 
 .title {
     text-transform: uppercase;
-    margin: 140px 0 40px 0;
+    margin: 120px 0 40px 0;
 }
 
 .paragraph {
     color: hsl(0, 36%, 70%);
     max-width: 450px;
     font-weight: 600;
-    /* letter-spacing: 1px; */
-    line-height: 20px;
+    line-height: 30px;
     margin-bottom: 50px;
 }
 
 
 .email-form {
     position: relative;
-
 }
 
 .email {
@@ -80,25 +79,50 @@ h1 {
     color: #c29b9d;
     border-color: #c29b9d;
     font-size: 16px;
-    /* border-style: none; */
     border: 1px solid #c29b9d;
 
+
 }
+
+
+.error {
+    position: absolute;
+    left: 270px;
+    top: 14px;
+    visibility: hidden;
+}
+
 
 .btn {
     height: 50px;
     width: 90px;
     border-radius: 25px;
     font-size: 16px;
-    background-image: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 74%, 74%));
     background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
     border: 1px none #c29b9d;
     position: absolute;
     left: 310px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.05), 0 3px 6px rgba(0, 0, 0, 0.10);
     color: white;
-    /* font-size: 20px; */
     font-weight: 300;
+    z-index: 1;
+    cursor: pointer;
+    transition: opacity 0.5s ease-out;
+
+}
+
+
+.btn:hover {
+    opacity: 0.7;
+}
+
+
+.small {
+    color: hsl(0, 93%, 68%);
+    padding: 10px 0 0 35px;
+    font-size: 14px;
+    visibility: hidden;
+    
 }
 
 
